--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,9 @@ li {
 	list-style: none;
   	float: left;
 }
+
+.carousel-indicators {
+	top: 620px;
+	display: flex;
+    justify-content: center;	
+}
